# picard-website

./: .dockerignore  .eslintrc  .gitignore  Dockerfile  INSTALL-LINUX.md  INSTALL-WINDOWS.md  INSTALL.md  README.md  Readme.md  app.py  changelog.html  config.py.sample  downloads.html  errors.py  fabfile.py  gulpfile.js  humans.txt  index.html  package-lock.json  package.json  plugins-generate.py  plugins.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  test.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docker-ci.yml  test.yml
.tx/: config
Admin/: Gen_JSON.py  Plugin_API.py
admin/: generate.py  generate_json.py
docker/: README.md  common.yml  docker-compose.prod.yml  docker-compose.test.yml  uwsgi-test.ini  uwsgi.ini
static/js/: os.js
static/less/: docs.less  index-page.less  site-wide.less  styles.less
static/less/pages/: changelog.less  downloads.less  index.less  plugins.less
templates/: 404.html  base.html  changelog.html  downloads.html  footer.html  header.html  index.html  navbar.html  plugins.html
templates/docs/: basics.html  build-osx.html  development.html  faq.html  guide.html  linux.html  mappings.html  options.html  plugin-api.html  scripting.html  tags.html  troubleshooting.html
views/: __init__.py  api.py  changelog.py  docs.py  humans.py  plugins.py
website/: build_plugins.py  build_plugins_test.py  cache_utils.py  cache_utils_test.py  config.py.example  conftest.py  default_config.py  expand.py  expand_test.py  nbsp_list.py  nbsp_list_test.py  plugin3_registry.py  plugin3_registry_test.py  plugin_utils.py  utils.py
website/frontend/: __init__.py  babel.cfg  babel.py  errors.py  exceptions.py  humans.txt  messages.pot  scheduler.py  scheduler_test.py  testing.py  views_test.py
website/frontend/static/css/: styles.css
website/frontend/static/js/: dataTables.min.js  highlight.pack.js
website/frontend/static/less/: docs.less  site-wide.less  styles.less
website/frontend/static/less/highlightjs/: picard.less
website/frontend/static/less/pages/: downloads.less  index.less  index.less~  mappings.less  plugins.less
website/frontend/static/less/theme/: fonts.less  navbars.less  theme.less  variables.less
website/frontend/templates/: base.html  changelog.html  downloads.html  index.html  plugins.html  quick-start.html
website/frontend/templates/docs/: base.html  basics.html  build-osx.html  build-windows.html  development.html  faq.html  guide.html  linux.html  mappings.html  options.html  plugin-api.html  scripting.html  tags.html  troubleshooting.html
website/frontend/templates/errors/: 404.html  503.html
website/frontend/translations/ca/LC_MESSAGES/: messages.po
website/frontend/translations/de/LC_MESSAGES/: messages.po
website/frontend/translations/es/LC_MESSAGES/: messages.po
website/frontend/translations/fr/LC_MESSAGES/: messages.po
website/frontend/translations/gl/LC_MESSAGES/: messages.po
website/frontend/translations/it/LC_MESSAGES/: messages.po
website/frontend/translations/ja/LC_MESSAGES/: messages.po
website/frontend/translations/ko/LC_MESSAGES/: messages.po
website/frontend/translations/lt/LC_MESSAGES/: messages.po
website/frontend/translations/nb_NO/LC_MESSAGES/: messages.po
website/frontend/translations/nl/LC_MESSAGES/: messages.po
website/frontend/translations/pl/LC_MESSAGES/: messages.po
website/frontend/translations/ru/LC_MESSAGES/: messages.po
website/frontend/translations/sq/LC_MESSAGES/: messages.po
website/frontend/translations/th/LC_MESSAGES/: messages.po
website/frontend/translations/tr/LC_MESSAGES/: messages.po
website/frontend/translations/uk/LC_MESSAGES/: messages.po
website/frontend/translations/zh_Hans/LC_MESSAGES/: messages.po
website/frontend/views/: __init__.py  api.py  api_test.py  changelog.py  changelog_test.py  docs.py  docs_test.py  humans.py  humans_test.py  plugins.py  plugins_test.py
