[project]
name = "picard-website"
version = "0.1.0"
description = "Website for MusicBrainz Picard"
requires-python = ">=3.9"
authors = [
    {name = "Shadab Zafar", email = "dufferzafar0@gmail.com"},
    {name = "Michael Wiencek", email = "mwtuea@gmail.com"},
    {name = "Laurent Monin", email = "zas@norz.org"},
    {name = "Sambhav Kothari", email = "sambhavs.email@gmail.com"},
    {name = "Philipp Wolfer", email = "ph.wolfer@gmail.com"},
    {name = "Sophist", email = "github@sodalis.co.uk"},
    {name = "Bob Swift", email = "bswift@rsds.ca"},
    {name = "Wieland Hoffmann", email = "themineo@gmail.com"},
    {name = "Raptorial", email = "raptka@gmail.com"},
    {name = "Roman Tsukanov", email = "roman@tsukanov.me"},
    {name = "TheJYKoder", email = "thejykoder@gmail.com"},
    {name = "Frederik 'Freso' S. Olesen", email = "freso.dk@gmail.com"},
    {name = "Hartama Putra", email = "hartamaadesaputra@gmail.com"},
    {name = "Wieland Hoffmann", email = "mineo@users.noreply.github.com"},
    {name = "Nicolás Tamargo", email = "reosarevok@gmail.com"},
    {name = "Abhigyan Khaund", email = "mail@abhigyan.xyz"},
    {name = "Aerozol", email = "aerozol1@gmail.com"},
    {name = "Mathieu Bridon", email = "bochecha@daitauha.fr"},
    {name = "Akash Nagaraj", email = "grassknoted@gmail.com"},
    {name = "Anjali Ujjainia", email = "ujjainia.2906@gmail.com"},
    {name = "Justin W. Flory", email = "git@jwf.io"},
    {name = "LeoVerto", email = "LeoVerto@users.noreply.github.com"},
    {name = "Mark Trolley", email = "marktrolley@gmail.com"},
    {name = "Rahul Kumar Gupta", email = "rahul.hp.gupta08@gmail.com"},
    {name = "Shen-Ta Hsieh", email = "ibmibmibm.tw@gmail.com"},
    {name = "Sumit Ghosh", email = "sumit.ghosh32@gmail.com"},
    {name = "Suraj Nath", email = "devversitymail@gmail.com"},
    {name = "Theodore Fabian Rudy", email = "dorerudy@gmail.com"},
    {name = "Ville Skyttä", email = "ville.skytta@iki.fi"},
    {name = "jomo", email = "git@jomo.tv"},
    {name = "vedantc98", email = "vedantc98@gmail.com"},
]
dependencies = [
    "blinker>=1.9",
    "cachelib>=0.13.0",
    "Flask>=3.1.1",
    "Flask-APScheduler>=1.13.1",
    "Flask-Babel>=4.0.0",
    "Markdown>=3.8",
    "mistune>=3.2.0",
    "packaging>=26.0",
    "jinja2>=3.1.6",
    "werkzeug>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "Flask-Testing>=0.8.1",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[tool.ruff]
src = ["website"]
exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E", "F", "W", "B", "I", "UP"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
lines-after-imports = 2
order-by-type = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"
